static/css/floorplan.css
#floorplan-view {
  background-color: #5d9bc7;
}

#floorplan-view.edit {
  background-color: #305067;
}

#floorplan {
  display: block;
  width: 100vmin;
  height: 100vmin;
  margin: 0 auto;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  background-image: url('/uploads/floorplan.svg');
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
}

.floorplan-thing {
  position: absolute;
  font-size: 2rem;
  width: 12.8rem;
  text-align: center;
  color: white;
  cursor: pointer;
  user-select: none;
}

.floorplan-thing-link {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.0);
  z-index: 10;
}

#floorplan.editing .floorplan-thing-link {
  display: none;
}

.floorplan-thing-name {
  margin-top: 0.5rem;
  max-height: 6rem;
  overflow: hidden;
}

#floorplan-edit-button {
  bottom: 2rem;
  right: 2rem;
  background-image: url('../optimized-images/edit.svg');
}

#floorplan-done-button {
  bottom: 2rem;
  right: 2rem;
  background-image: url('../optimized-images/done.svg');
}

#floorplan-upload-form {
  position: fixed;
  width: 100%;
  bottom: 0;
  color: #fff;
  text-align: center;
  margin: 0 auto;
  padding: 2rem;
  box-sizing: border-box;
}

#floorplan-upload-form.hidden {
  display: none;
}

#floorplan-upload-button {
  margin: 1rem;
  background-image: url('../optimized-images/upload.png');
  background-repeat: no-repeat;
  background-position: 0.75rem;
  background-size: 2.4rem;
  padding-left: 4rem;
}

#floorplan-upload-button.loading {
  background-image: url('../optimized-images/loading.gif');
}

#floorplan-view .hint {
  font-size: 1.4rem;
  color: #ccc;
}

#floorplan-file-input {
  display: none;
}

.svg-thing-link {
  outline: none;
  cursor: pointer;
}

.svg-thing-icon {
  fill: #5d9bc7;
}

#floorplan-view.edit .svg-thing-icon {
  fill: #5c7587;
}

.svg-thing-text {
  fill: #fff;
  text-shadow: 1px 1px 5px #000;
  font-size: 2px; /* Gets scaled into SVG units */
  display: none;
}

#floorplan-view.edit .svg-thing-link {
  cursor: move;
}

#floorplan-view.edit .svg-thing-text {
  display: block;
}

